# Algorytmy-heurystyczne

./: PVC.py  PVS.ipynb  PVS.py  README.md  body algo.txt  funcs.py  results.py  wyniki.xlsx
.github/workflows/: deploy-frontend.yaml
PVS/: PVS.ipynb  PVS.py  wyniki.xlsx
PVS_alg/: hba.py  interfaces.py  pvs.py  pvs_classes.py  pvs_notebook.ipynb  results.py  snake.ipynb  snake.py  snake_classes.py  wyniki.xlsx  xd.ipynb
PVS_alg/.ipynb_checkpoints/: snake-checkpoint.ipynb
archive/PVS/: PVS_public.py  results.py  text.xlsx
backend/: Gazelle Optimization Algorithm_test_results.csv  PVS_test_results.csv  pvs_state.txt  pyproject.toml  seed.py
backend/app/: server.py
backend/app/algorithms/: __init__.py  algorithms_models.py  algorithms_router.py  algorithms_service.py
backend/app/core/: config.py  models.py
backend/app/core/models/: function.py  param_info.py
backend/app/functions/: __init__.py  functions_router.py  functions_service.py
backend/app/storage/: __init__.py  storage_router.py  storage_service.py
backend/storage/algorithms/: goa.py  hba.py  interfaces.py  pvs.py  pvs_classes.py  snake.py
backend/storage/functions/: baele.py  bukin.py  himmelblau.py  new_function.pkl  rastrigin.py  rosenbrock.py  sphere.py  zielonka.py
backend/storage/raports/: HBA_test_results.csv  PVS_test_results.csv  goa_23803_test_results.csv  hba_87725_test_results.csv  pvs_9033_test_results.csv
backend/tests/: aplusb.py  upload_function.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/core/: App.tsx
(+17 files in other folders)
