[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["BartoszBugla <48729791+BartoszBugla@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
python-multipart = "^0.0.6"
dill = "^0.3.7"
numpy = "^1.26.2"
optuna = "^3.5.0"
pandas = "^2.1.4"
reportlab = "^4.0.9"
tabulate = "^0.9.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
